# mkv-merge

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  hatch_build.py  main.py  pyproject.toml
gup/: generated-Claude3.7.md  generated-Claude3.7.py  generated-DeepSeekR1.md  generated-DeepSeekR1.py  generated-DeepSeekV3.md  generated-DeepSeekV3.py  generated-GPT4o.md  generated-GPT4o.py  generated-Gemini2ProExp.md  generated-Gemini2ProExp.py  generated-Grok2.md  generated-Grok2.py  generated-Grok3.md  generated-Grok3.py  generated-QwQ32B.md  generated-QwQ32B.py  generated-Qwen2.5Max-QwQ.md  generated-Qwen2.5Max-QwQ.py  prompt.txt  test.py
gup/obsolete/: generated-Claude3.7.md  generated-Claude3.7.py  generated-DeepSeekR1.md  generated-Grok2.md  generated-Grok2.py  generated-Qwen2.5Max-QwQ.py
mkv_merge/: cli.py  create.py  logging.py  main.py  process.py
mkv_merge/mkvlib/: sdk.py
scripts/: build_mkvlib.ps1  build_mkvlib.sh  mkvlib.patch
src/mkvlib/: sdk.py
