[project]
name = "mkv_merge"
version = "0.1.0"
description = "Merge mkv, mka, ass and perform ass font subset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["hatchling"]

[project.scripts]
mkv-merge = "mkv_merge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
artifacts = ["**.so"]

[tool.hatch.build.targets.sdist]
exclude = ["third-party"]

[tool.ruff]
exclude = ["third-party"]

[dependency-groups]
dev = ["colorama>=0.4.6"]
